fix: contact now switches to column on smaller screens

--- a/components/Contact.module.css
+++ b/components/Contact.module.css
@@ -12,7 +12,14 @@
 .linksWrapper {
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  flex-direction: column;
+  gap: var(--spacer-s);
+}
+@media (min-width: 450px) {
+  .linksWrapper {
+    flex-direction: row;
+    align-items: flex-end;
+  }
 }
 
 .links {
